# midas-journal-834

GradientDescentTrustRegion/: CMakeLists.txt  CommandObserver.h  ImageRegistration1.cxx  ImageRegistration12.cxx  ImageRegistration13.cxx  ImageRegistration18.cxx  ImageRegistration20.cxx  ImageRegistration3.cxx  ImageRegistration4.cxx  ImageRegistration5.cxx  ImageRegistration6.cxx  ImageRegistration7.cxx  ImageRegistration9.cxx  MultiResImageRegistration1.cxx  MultiResImageRegistration2.cxx  RegistrationObserver.h  itkGradientDescentTrustRegionOptimizer.cxx  itkGradientDescentTrustRegionOptimizer.h  itkGradientDescentTrustRegionOptimizerTest.cxx  itkRegularStepGradientDescentOptimizerTest.cxx  tapirTrustRegionOptimizer.cpp  tapirTrustRegionOptimizer.h
